[tool.poetry]
name = "grafico-medicamentos"
version = "0.1.0"
description = "Programa que grafica 2 medicamentos a lo largo del tiempo"
authors = ["Federico Torres <federicoivantorres1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
matplotlib = "^3.8.2"
requests = "^2.31.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"